--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!-- main node definition -->
 <script type="text/javascript">
     RED.nodes.registerType('bert-tokenizer',{
-        category: 'analysis-function',
+        category: 'Models',
         color: '#a6bbcf',
         defaults: {
             name: {value:""},
