Remove console.log
This spams the console when dealing with numerous text inputs`.

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
 </script>
 <script type="text/html" data-help-name="bert-tokenizer">
     <!-- the first <p> is the tooltip when hovering over the pallette -->
-    <p>Generate a single input from a text to feed into BERT models</p>
+    <p>Generate a single input from a text to feed into BERT models.</p>
 
     <h3>Input</h3>
     <dl class="message-properties">
@@ -50,7 +50,7 @@
         <dt class="optional">URL
             <span class="property-type">string</span>
         </dt>
-        <dd>Url to custom vocabulary:</dd>
+        <dd>URL to custom vocabulary:</dd>
         <dd>1. leave empty to load the default
         <dd>2. http(s):// to fetch the model from web.</dd>
         <dd>3. file:// to load the vocaburlary file on the server.</dd>
@@ -72,5 +72,5 @@
         <p>The input payload is text (i.e. words, sentences, etc) to be converted into input
         feature for the BERT model. The input is tokenized and no longer than 126 tokens.
         Each name array in the output object has 128 numbers.</p>
-        <p>If the URL failed to load then the default vocabulary will be load instead.</p>
+        <p>If the URL failed to load, then the default vocabulary will be loaded instead.</p>
 </script>
